@@ -80,6 +80,7 @@ Stable versions
 	- XM: detect more Modplug Tracker XMs via large unused instruments.
 	- XM: handle out-of-range notes more closely to FT2.
 	- XM: fix setting toneporta target with an active invalid instrument.
+	- XM: implement FT2-style offset effect memory (QUIRK_FT2BUGS only).
 	Changes by Alice Rowan and ds-sloth:
 	- Minor Impulse Tracker loader performance improvements.
 
